--- a/xbbcode.css
+++ b/xbbcode.css
@@ -6,6 +6,13 @@
 
 }
 
+.xbbcode-center {
+    margin-left:auto;
+	margin-right:auto;
+	display: block;
+	text-align: center;
+}
+
 .xbbcode-code {
     white-space: pre-wrap;
     font-family: monospace;
