added missing email, face, font, justify, large, left, right, small tags as per reference at http://www.moreonfew.com/what-is-a-bulletin-board-code-or-bbcode/

--- a/xbbcode.css
+++ b/xbbcode.css
@@ -22,6 +22,21 @@
     font-style: italic; 
 }
 
+.xbbcode-justify {
+	display: block;
+	text-align: justify;
+}
+
+.xbbcode-left {
+	display: block;
+	text-align: left;
+}
+
+.xbbcode-right {
+	display: block;
+	text-align: right;
+}
+
 .xbbcode-s {
     text-decoration: line-through;
 }
